fix footer content overlapping and scrollbar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         font-family: sans-serif;
       }
 
+      .layout {
+        min-height: 90vh !important;
+        height: 90vh;
+      }
+
       .loader-container {
         display: flex;
         align-items: center;
